Fixed layout issues

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,5 +5,5 @@
 }
 
 body {
-  background-color: #f0f0f3;
+  background-color: #ffffff;
 }
